--- a/dom/one.html
+++ b/dom/one.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
    <title>Dom Learning</title>
+   <style>
+    .bg-black{
+        background-color: black;
+        color: white;
+    }
+   </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading">DOM learning on chia aur code</h1>
+<body class="bg-black">
+    <div >
+        <h1 id = "title" class="heading">DOM learning on chai aur code</h1>
         <p>wushang clan.</p>
     </div>
 </body>
